--- a/gradle.properties
+++ b/gradle.properties
@@ -40,10 +40,13 @@ betterfoliage_version=228529:3393955
 betterquesting_version=238856:2950248
 bettersurvival_version=260360:5729552
 callablehorses_version=331746:3568565
+champions_version=307152:3177947
 charm_version=318872:3146596
 chunkanimator_version=236484:3850023
 defiledlands_version=273502:2835318
+distinctdamagedescriptions_version=403617:6973110
 epicsiegemod_version=229449:2920048
+infernalmobs_version=227875:2771611
 infrlcraft_version=888556:6596246
 inspirations_version=284007:2843007
 jei_version=238222:5060339
@@ -56,7 +59,8 @@ rlartifacts_version=819886:4475428
 rlcombat_version=711714:5940474
 rustic_version=256141:6031613
 scalinghealth_version=248027:2816920
-somanyenchantments_version=267035:6933862
+#somanyenchantments_version=267035:6933862
+somanyenchantments_version=1.0.6indev
 spartanweaponry_version=278141:4393116
 
 # cursemaven libs
