--- a/gradle.properties
+++ b/gradle.properties
@@ -59,8 +59,7 @@ rlartifacts_version=819886:4475428
 rlcombat_version=711714:5940474
 rustic_version=256141:6031613
 scalinghealth_version=248027:2816920
-#somanyenchantments_version=267035:6933862
-somanyenchantments_version=1.0.6indev
+somanyenchantments_version=267035:7024066
 spartanweaponry_version=278141:4393116
 
 # cursemaven libs
